# nostr-sdk-flutter

./: CHANGELOG.md  pubspec.yaml
.github/workflows/: precompiled_binaries.yml
cargokit/build_tool/lib/src/: options.dart
lib/: nostr_sdk.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/client/: options.dart
lib/src/rust/api/database/: events.dart
lib/src/rust/api/protocol/key/: secret_key.dart
lib/src/rust/api/protocol/nips/: nip49.dart
rust/: Cargo.toml  cargokit.yml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/client/: mod.rs  options.rs
rust/src/api/database/: events.rs
rust/src/api/protocol/event/: id.rs
rust/src/api/protocol/key/: secret_key.rs
rust/src/api/protocol/nips/: mod.rs  nip49.rs
