[package]
name = "nostr_sdk"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "generate"
path = "generate.rs"
required-features = ["codegen"]

[features]
default = []
codegen = ["dep:flutter_rust_bridge_codegen"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
flutter_rust_bridge = { version = "=2.0.0", features = ["anyhow", "chrono"] }
flutter_rust_bridge_codegen = { version = "=2.0.0", optional = true }
#nostr-sdk  = { version = "0.39", default-features = false, features = ["all-nips", "lmdb", "tor"] }
nostr-sdk  = { git = "https://github.com/rust-nostr/nostr", rev = "a620e3fef5aaef343f5edf58bd682cea5744d488", default-features = false, features = ["all-nips", "lmdb", "tor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce the number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary.
